Finished home-page

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -26,10 +26,18 @@
         <div class="navbar-search">
             <input type="text" placeholder="Enter a destination or keyword">
             <i class="fas fa-search"></i> <!-- Font Awesome icon -->
-            <button class="search-btn">Search</button>
-            <button class="clear-btn">Clear</button>
+            <button class="search-btn btn">Search</button>
+            <button class="clear-btn btn">Clear</button>
         </div>
     </nav>
+
+    <section class="homepage-section">
+        <div class="homepage-content">
+            <h2 class="homepage-title">EXPLORE<br>DREAM<br>DESTINATION</h2>
+            <p class="homepage-subtitle">It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivated the heart and ignites a sense of wonder.</p>
+            <button class="book-now-btn btn">BOOK NOW</button>
+        </div>
+    </section>
     
 </body>
 </html>
