Finished about-us page

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sangye</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <link rel="stylesheet" href="travel_recommendation.css">
 </head>
 <body>
@@ -19,7 +18,7 @@
 
         <ul class="navbar-links">
             <li><a href="./travel_recommendation.html">Home</a></li>
-            <li><a href="./travel_recommendation.html">About Us</a></li>
+            <li><a href="./about-us.html">About Us</a></li>
             <li><a href="./travel_recommendation.html">Contact Us</a></li>
         </ul>
 
@@ -31,13 +30,14 @@
         </div>
     </nav>
 
-    <section class="homepage-section">
-        <div class="homepage-content">
-            <h2 class="homepage-title">EXPLORE<br>DREAM<br>DESTINATION</h2>
-            <p class="homepage-subtitle">It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivated the heart and ignites a sense of wonder.</p>
-            <button class="book-now-btn btn">BOOK NOW</button>
-        </div>
-    </section>
-    
+    <div class="body-container">
+        <section class="homepage-section">
+            <div class="homepage-content">
+                <h2 class="homepage-title">EXPLORE<br>DREAM<br>DESTINATION</h2>
+                <p class="homepage-subtitle">It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivated the heart and ignites a sense of wonder.</p>
+                <button class="book-now-btn btn">BOOK NOW</button>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
