--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="travel_recommendation.css">
 </head>
@@ -19,7 +19,7 @@
         <ul class="navbar-links">
             <li><a href="./travel_recommendation.html">Home</a></li>
             <li><a href="./about-us.html">About Us</a></li>
-            <li><a href="./travel_recommendation.html">Contact Us</a></li>
+            <li><a href="./contact-us.html">Contact Us</a></li>
         </ul>
 
         <div>
