Added clear button feature

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -27,7 +27,7 @@
             <input type="text" id="search-txt" placeholder="Enter a destination or keyword">
             <i class="fas fa-search"></i> <!-- Font Awesome icon -->
             <button class="btn" id="search-btn">Search</button>
-            <button class="btn">Clear</button>
+            <button class="btn" id="clear-btn">Clear</button>
         </div>
     </nav>
 
