--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <ul class="navbar-links">
-            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about-us.html">About Us</a></li>
             <li><a href="./contact-us.html">Contact Us</a></li>
         </ul>
